<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab 3 - Checkbox</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chk_ios">iPhone</string>
    <string name="chk_windows">Windows Mobile</string>
    <string name="chk_android">Android</string>
    <string name="btn_display">Display Choices as Toast</string>
    <string name="heading">Tick some boxes and press the button</string>

</resources>
